# andam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  crates.js  deny.toml  help.html  index.html  justfile  settings.html  src-files.js
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml  security.yml  test-release.yml
andam/: all.html  index.html  sidebar-items.js
andam/advanced/: index.html  sidebar-items.js
andam/advanced/weak_lensing/: fn.convergence_to_shear.html  fn.lensing_power_spectrum.html  index.html  sidebar-items.js  struct.ConvergenceField.html  struct.Shear.html
andam/beyond_lcdm/: index.html  sidebar-items.js
andam/beyond_lcdm/dark_energy/: enum.DarkEnergyModel.html  fn.compare_dark_energy_models.html  index.html  sidebar-items.js
andam/beyond_lcdm/neutrinos/: enum.MassHierarchy.html  index.html  sidebar-items.js  struct.MassiveNeutrinos.html
andam/cmb/: index.html  sidebar-items.js
andam/cmb/fluctuations/: fn.acoustic_peak_positions.html  fn.angular_power_spectrum.html  fn.dimensionless_power_spectrum.html  index.html  sidebar-items.js
andam/cmb/polarization/: fn.decompose_eb.html  index.html  sidebar-items.js  struct.PolarizationSpectrum.html  struct.StokesParameters.html
andam/cmb/recombination/: fn.ionization_fraction.html  fn.optical_depth.html  fn.saha_equation.html  (+4 more)
andam/constants/: constant.ALPHA.html  constant.AMU.html  constant.AU.html  constant.C.html  constant.EV_TO_J.html  constant.E_CHARGE.html  constant.G.html  constant.GYR.html  constant.H0_PLANCK.html  constant.HBAR.html  constant.H_PLANCK.html  constant.J_TO_EV.html  constant.K_B.html  constant.L_SUN.html  constant.M_E.html  constant.M_N.html  constant.M_P.html  constant.M_SUN.html  constant.N_GAMMA.html  constant.PARSEC.html  constant.RHO_CRIT_COEFF.html  constant.R_SUN.html  constant.SIGMA_SB.html  constant.SIGMA_T.html  constant.T_CMB.html  constant.T_NU.html  constant.YEAR.html  fn.critical_density.html  fn.hubble_time.html  index.html  sidebar-items.js
andam/dynamics/: index.html  sidebar-items.js
andam/early_universe/: index.html  sidebar-items.js
andam/observations/: index.html  sidebar-items.js
andam/perturbations/: index.html  sidebar-items.js
andam/statistics/: index.html  sidebar-items.js
andam/structure/: index.html  sidebar-items.js
andam/units/: enum.Energy.html  enum.Length.html  enum.Mass.html  enum.Time.html  index.html  sidebar-items.js
andam/visualization/: index.html  sidebar-items.js
docs/: ADVANCED_PHASES_SUMMARY.md  API_REFERENCE.md  CI_CD_FILES_CREATED.md  CI_CD_SETUP.md  CI_CD_SUMMARY.md  DOCSRS_FIX.md  HDF5_PUBLISHING_NOTE.md  PHASES_7_8_9_EXAMPLES.md  PHASES_7_8_9_IMPLEMENTATION_SUMMARY.md  PHASE_1_FOUNDATION.md  PHASE_2_CORE_COSMOLOGY.md  PHASE_3_ADVANCED_FEATURES.md  PHASE_4_POLISH_DOCUMENTATION.md  PHASE_5_IMPLEMENTATION_SUMMARY.md  PHASE_5_NUCLEOSYNTHESIS.md  PHASE_6_ADVANCED_STRUCTURE.md  PHASE_6_IMPLEMENTATION_SUMMARY.md  PHASE_7_8_9_ADVANCED_TOPICS.md  PROJECT_OVERVIEW.md  PUBLISHING_READY.md  QUICK_START.md  QUICK_START_CI.md  RENAME_SUMMARY.md  USER_GUIDE.md
examples/: bbn_evolution.rs  cmb_power_spectrum.rs  cmb_power_spectrum.rs.disabled  corner_plot.rs  density_slice.rs  distance_measures.rs  halo_mass_function.rs  hubble_diagram.rs  hubble_parameter.rs  matter_power_spectrum.rs  model_comparison.rs  polarization_spectrum.rs  power_spectrum_comparison.rs  recombination.rs  structure_growth.rs  universe_evolution.rs
output/: cmb_power_spectrum.html  distance_measures.html  matter_power_spectrum.html
search.index/: 01d2ef466fe0.js  07611a16fcf7.js  0c7e20f4adf6.js  0d9a3d0210bc.js  0dbe6886e01b.js  11e580cf9250.js  16c877028431.js  1934c9a051e5.js  1b089180c9a7.js  1dcf9db19785.js  1e4a29b9c549.js  239d350ef973.js  2a1e9121956e.js  2a8c746488fe.js  2aaa493956b6.js  2b0d3acc5969.js  2d55d2c8735b.js  2d7ce6a3e445.js  2fd1fe4341bd.js  35dc2643674d.js  37781e1fad86.js  3835990dbcbb.js  39ac506a625c.js  3c1df289b58b.js  3e35abaaa0ba.js  428a6bed4a23.js  4544e5ba3da0.js  4718cb0afeb1.js  4b3f0d85a65a.js  4d019598b4f4.js  50390205dccd.js  53d40d4c9260.js  54f4e4573125.js  55c43ae66e66.js  58215e497093.js  5bc9a9c60c7a.js  5e1aed2df180.js  5fa23af48400.js  632c23772641.js  6a10e3c356d2.js  (+8 more)
search.index/crateNames/: 0a42125c9e99.js
search.index/desc/: dfc657bd4e59.js
search.index/entry/: fe94a91bb6c3.js
search.index/function/: 8175f4a817e4.js
search.index/generic_inverted_index/: 2022d906756d.js
search.index/name/: 4d70e1c55ef1.js
search.index/normalizedName/: 6cfad6db4ee0.js
search.index/path/: 648c44888d4e.js
search.index/type/: 6862081a6436.js
src/: constants.rs  lib.rs  units.rs
src/advanced/: mod.rs  weak_lensing.rs
src/andam/: constants.rs.html  lib.rs.html  units.rs.html
src/beyond_lcdm/: dark_energy.rs  mod.rs  neutrinos.rs
src/cmb/: fluctuations.rs  mod.rs  polarization.rs  recombination.rs
src/dynamics/: components.rs  friedmann.rs  mod.rs
src/early_universe/: freeze_out.rs  mod.rs  network.rs  nucleosynthesis.rs  reactions.rs
src/observations/: distances.rs  mod.rs
src/perturbations/: boltzmann.rs  growth.rs  mod.rs
src/statistics/: fisher.rs  mcmc.rs  mod.rs
src/storage/: cmb.rs  io.rs  mcmc.rs  mod.rs  structure.rs
src/structure/: correlation.rs  cosmic_web.rs  halos.rs  mod.rs  nonlinear.rs  power_spectrum.rs
src/visualization/: colors.rs  equation_plots.rs  mod.rs  plotly_plots.rs  plots_2d.rs
tests/: integration_tests.rs  phase2_tests.rs  phase3_tests.rs
(+147 files in other folders)
