[package]
name = "andam"
version = "0.1.0"
edition = "2021"
authors = ["Andam Contributors"]
license = "MIT OR Apache-2.0"
description = "A comprehensive Rust library for cosmological calculations and visualizations"
repository = "https://github.com/cosmos-andam/andam"
homepage = "https://github.com/cosmos-andam/andam"
documentation = "https://docs.rs/andam"
keywords = ["cosmology", "astrophysics", "physics", "simulation"]
categories = ["science", "simulation"]

[dependencies]
# Numerical computation
ndarray = "0.15"
nalgebra = "0.32"
num-complex = "0.4"
num-traits = "0.2"

# ODE solvers
ode_solvers = "0.4"

# Plotting
plotly = { version = "0.8", features = ["kaleido"] }
plotters = { version = "0.3", features = ["all_series", "bitmap_encoder"] }
plotters-backend = "0.3"

# Image processing
image = "0.24"

# Utilities
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel computing
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

# [[bench]]
# name = "friedmann_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
