[package]
name = "andam"
version = "0.1.0"
edition = "2021"
authors = ["Praba Siva"]
license = "MIT OR Apache-2.0"
description = "A comprehensive Rust library for cosmological calculations,visualizations and simulations"
repository = "https://github.com/cosmos-andam/andam"
homepage = "https://github.com/cosmos-andam/andam"
documentation = "https://docs.rs/andam"
keywords = ["cosmology", "astrophysics", "physics", "simulation"]
categories = ["science", "simulation"]

[dependencies]
# Numerical computation
ndarray = "0.15"
nalgebra = "0.32"
num-complex = "0.4"
num-traits = "0.2"

# ODE solvers
ode_solvers = "0.4"

# Plotting (optional)
plotly = { version = "0.8", features = ["kaleido"], optional = true }
plotters = { version = "0.3", features = ["all_series", "bitmap_encoder"], optional = true }
plotters-backend = { version = "0.3", optional = true }

# Image processing
image = "0.24"

# Utilities
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel computing
rayon = "1.7"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# HDF5 support (optional)
hdf5 = { version = "0.8", optional = true }
flate2 = { version = "1.0", optional = true }

# Time handling (optional, needed for HDF5)
chrono = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
tempfile = "3.0"

[features]
default = ["plotting"]
plotting = ["plotly", "plotters", "plotters-backend"]
hdf5-storage = ["hdf5", "flate2", "chrono"]
full = ["plotting", "hdf5-storage"]

# [[bench]]
# name = "friedmann_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
